updated colors and landing page

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                 could make their lives easier.</p>
               <div class="buttons">
                   <button>download resume</button>
-                  <button>let's get coffee</button>
+                  <a href="mailto:gokuyan@gmail.com"><button>let's get coffee</button></a>
               </div>
       </section>
 
