--- a/coop.html
+++ b/coop.html
@@ -297,9 +297,12 @@
               </div>
           </section>
 
-          <section class="contact">
-              <h2>see something you like?</h2>
-              <a href="contact.html"><button>let's chat</button></a>
+          <section id="contact">
+              <div class"contact-container">
+                  <h4>Want to chat? Work together? I would love to hear from you.</h4>
+                  <!--<a href="contact.html"><button>let's chat</button></a>-->
+                <a href="mailto:gokuyan@gmail.com"><p>gokuyan@gmail.com</p></a>
+              </div>
           </section>
       </main>
 
