--- a/rfs.html
+++ b/rfs.html
@@ -26,7 +26,7 @@
       <header>
           <nav>
               <a href="index.html" class="logo">
-                  <img src="images/spring.png" alt="gulbahar okuyan logo">
+                  <img src="images/winter.png" alt="gulbahar okuyan logo">
               </a>
               <ul class="nav-bar" id="topnav">
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
@@ -294,9 +294,12 @@
               </div>
           </section>
 
-          <section class="contact">
-              <h2>see something you like?</h2>
-              <a href="contact.html"><button>let's chat</button></a>
+          <section id="contact">
+              <div class"contact-container">
+                  <h4>Want to chat? Work together? I would love to hear from you.</h4>
+                  <!--<a href="contact.html"><button>let's chat</button></a>-->
+                <a href="mailto:gokuyan@gmail.com"><p>gokuyan@gmail.com</p></a>
+              </div>
           </section>
       </main>
 
