updated home page layout

--- a/about.html
+++ b/about.html
@@ -25,94 +25,88 @@
   <body class="about-me">
       <header>
           <nav>
-              <a href="index.html" class="logo">
+              <!--<a href="index.html" class="logo">
                   <img src="images/spring.png" alt="gulbahar okuyan logo">
-              </a>
+              </a>-->
               <ul class="nav-bar" id="topnav">
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i>
                   <div class="clearfix"></div>
                   <li><a href="index.html">portfolio</a></li>
                   <li><a href="about.html">about</a></li>
-                  <li><a href="contact.html">contact</a></li>
+                  <!--<li><a href="contact.html">contact</a></li>-->
                   </a>
               </ul>
           </nav>
-          <section class="hero">
-                <h1>gulbahar okuyan-waugh</h1>
-          </section>
-          <section class="photo">
-                <img src="images/photo.png">
-          </section>
       </header>
+      <main>
+          <section class="about-container">
+                <div class="about-text">
+                    <h2>“Just because something works doesn’t mean it can’t be improved.”</h2>
+                    <p>I am a freelance UX designer with 8 years’ experience in strategy and project development.
 
-      <section class="about">
-            <h3>g for short, rose for translation</h3>
-            <p>I am a UX designer with 8 years’ experience in
-            strategy and project development.
-            <p>Currently, I work as a freelance UX/UI designer and marketing consultant
-              to small businesses and start-ups.
-            <h4>I like to think BIG</h4>
-            <p>I began my journey in design after being inspired by a <a href="https://youtu.be/FmTwrScJ04c">TedX Talk by David Butler</a>,
-              Coca-Cola’s first and former global head of design. And again after reading
-            <a href="https://read.amazon.com/kp/embed?asin=B00LD1S2L4&preview=newtab&linkCode=kpe&ref_=cm_sw_r_kb_dp_fk8mBb5R29P6H">
-              his book</a> where he explains how he applied design principles on business operations
-              to create a new system that made the large company operate as a start-up,
-              always prototyping and innovating, and in the process saved them over
-              $500 million.
-              <p>The potential of design - making things practical, usable, and
-                beautiful - excited me.
-              <p>So I started with designing projects in resource-poor
-                countries, and little by little, I’ve increased my skills in design
-                software and Microsoft products.
-              <h4>I enjoy discovering new perspectives</h4>
-              <p>I love traveling, meeting people, and learning new things.
-                Most recently, I was in rural Philippines interviewing women
-                entrepreneurs to better understand how financial technology
-                could make their lives easier.</p>
-              <div class="buttons">
-                  <button>download resume</button>
-                  <a href="mailto:gokuyan@gmail.com"><button>let's get coffee</button></a>
-              </div>
-      </section>
+                    <p>My specialty is in identifying the big picture and working downwards.
+                      I thrive in team environments, working with diverse people in a community
+                      to address and overcome boundaries.
 
-      <section class="capabilities">
-          <div class="caps">
-              <div class="clearfix"> </div>
-              <div class="skills">
-                  <h3>Skills</h3>
-                  <p>UX design, UI design, branding & identity, information architecture,
-                    wireframing, user research/testing, marketing & communications, strategy,
-                    business development</p>
+                    <p>It’s the potential of design and its ability to make things practical,
+                       usable, and beautiful that drives me.
+
+                    <p>I enjoy traveling and meeting people. Most recently, I was in
+                      rural Philippines interviewing women entrepreneurs to better
+                      understand how financial technology could impact their day-to-day.</p>
+                    <div class="buttons">
+                          <button>download resume</button>
+                          <a href="mailto:gokuyan@gmail.com"><button>email me</button></a>
+                    </div>
+                </div>
+          </section>
+          <section class="capabilities">
+              <div class="capabilities-container">
+                  <div class="caps">
+                  <div class="clearfix"> </div>
+                  <div class="first">
+                      <h3>Skills</h3>
+                      <p>UX design, UI design, branding & identity, information architecture,
+                        wireframing, user research/testing, marketing & communications, strategy,
+                        business development</p>
+                  </div>
+                  <div class="second">
+                      <h3>Software</h3>
+                      <p>Sketch, Adobe CC (Illustrator, Photoshop, InDesign), Keynote, Microsoft
+                        Office Suite (Word, Excel, PowerPoint, Publisher), InVision, Balsamiq, Figma</p>
+                  </div>
+                  <div class="clearfix"> </div>
               </div>
-              <div class="software">
-                  <h3>Software</h3>
-                  <p>Sketch, Adobe CC (Illustrator, Photoshop, InDesign), Keynote, Microsoft
-                    Office Suite (Word, Excel, PowerPoint, Publisher), InVision, Balsamiq, Figma</p>
               </div>
-              <div class="clearfix"> </div>
+          </section>
+    <!--
+          <section class="moodboard">
+                <h2>visual inspiration</h2>
+                <img src="images/Moodboard.png">
+          </section>
+    -->
+          <div class="clearfix"></div>
+      </main>
+      <footer>
+          <div class="footer-info">
+              <div class="footer-container">
+                  <ul class="icons">
+                        <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
+                            <i class="fab fa-linkedin-in"></i></a>
+                        </li>
+                        <li><a href="mailto:gokuyan@gmail.com" alt="email me">
+                            <i class="fas fa-envelope"></i></a>
+                        </li>
+                        <li><a href="https://github.com/okleyla" alt="github">
+                            <i class="fab fa-github"></i></a>
+                        </li>
+                  </ul>
+                  <div class="footer-text">
+                      <p>content and design. &copy 2018 Gulbahar Okuyan-Waugh</p>
+                  </div>
+              </div>
           </div>
-      </section>
-
-      <section class="moodboard">
-            <h2>visual inspiration</h2>
-            <img src="images/Moodboard.png">
-      </section>
-
-      <footer class="footer-info">
-          <ul class="icons">
-                <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
-                    <i class="fab fa-linkedin-in"></i> </a>
-                </li>
-                <li><a href="mailto:gokuyan@gmail.com" alt="email me">
-                    <i class="fas fa-envelope"></i></a>
-                </li>
-                <li><a href="https://github.com/okleyla" alt="github">
-                    <i class="fab fa-github"></i> </a>
-                </li>
-          </ul>
-          <p class="copyright">content and design. &copy 2018 Gulbahar Okuyan-Waugh
-          </p>
       </footer>
   </body>
 
