--- a/rfs.html
+++ b/rfs.html
@@ -24,10 +24,10 @@
 
   <body class="case-study">
       <header>
-          <nav>
+          <nav><!--
               <a href="index.html" class="logo">
-                  <img src="images/winter.png" alt="gulbahar okuyan logo">
-              </a>
+                  <img src="images/spring.png" alt="gulbahar okuyan logo">
+              </a>-->
               <ul class="nav-bar" id="topnav">
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i>
@@ -288,35 +288,43 @@
                   <a href="index.html"><img src="images/previous.png" class="left"></a>
                   <a href="coop.html"><img src="images/next.png" class="right"></a>
               </div>
+
               <div class="case-studies">
                   <a href="rfs.html"><img src="images/rfs-laptop.png" class="first"></a>
                   <a href="coop.html"><img src="images/coop-laptop.png" class="second"></a>
               </div>
+              <div class="clearfix"></div>
           </section>
 
           <section id="contact">
-              <div class"contact-container">
-                  <h4>Want to chat? Work together? I would love to hear from you.</h4>
-                  <!--<a href="contact.html"><button>let's chat</button></a>-->
-                <a href="mailto:gokuyan@gmail.com"><p>gokuyan@gmail.com</p></a>
+              <div class="contact-container">
+                  <div class="contact-text">
+                      <h2>If you’d like to get in touch to work or just chat about
+                        all things design & milan</h2>
+                      <a href="mailto:gokuyan@gmail.com"><button>email me</button></a>
+                  </div>
               </div>
           </section>
       </main>
+      <div class="clearfix"></div>
 
-<footer class="footer-info">
-    <ul class="icons">
-          <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
-              <i class="fab fa-linkedin-in"></i> </a>
-          </li>
-          <li><a href="mailto:gokuyan@gmail.com" alt="email me">
-              <i class="fas fa-envelope"></i></a>
-          </li>
-          <li><a href="https://github.com/okleyla" alt="github">
-              <i class="fab fa-github"></i> </a>
-          </li>
-    </ul>
-    <p class="copyright">content and design. &copy 2018 Gulbahar Okuyan-Waugh
-    </p>
-</footer>
+      <footer>
+          <div class="footer-info">
+              <div class="footer-container">
+                  <ul class="icons">
+                        <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
+                            <i class="fab fa-linkedin-in"></i></a>
+                        </li>
+                        <li><a href="mailto:gokuyan@gmail.com" alt="email me">
+                            <i class="fas fa-envelope"></i></a>
+                        </li>
+                        <li><a href="https://github.com/okleyla" alt="github">
+                            <i class="fab fa-github"></i></a>
+                        </li>
+                  </ul>
+                  <p>content and design. &copy 2018 Gulbahar Okuyan-Waugh</p>
+              </div>
+          </div>
+      </footer>
 </body>
 </html>
