updated mobile responsiveness for rfs case study

--- a/rfs.html
+++ b/rfs.html
@@ -55,7 +55,7 @@
             <p>After a successful stint on Etsy, the entrepreneur decided that it was time to
               host his own site and define his brand. Enter: me. My role was to help him with
               strategy, marketing, and design.</p>
-            <a href="#"><button class="case-study-button">view prototype</button></a>
+            <a href="https://projects.invisionapp.com/share/E5E270F8X#/screens"><button class="case-study-button">view prototype</button></a>
           </div>
           <section class="intro">
               <div class="intro-text">
