--- a/coop.html
+++ b/coop.html
@@ -276,7 +276,7 @@
 
           <section class="conclusion">
               <div class="conclusion-container">
-                  <h2>what i leared from this experience</h2>
+                  <h2>what i learned from this experience</h2>
                   <p>Dashboards are very personal. Most users wanted the ability to
                     customize how it looked - colors and background.
                   <p>Your taste is less important than the user’s style preferences.
