--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <title>UX Designer: Gulbahar Okuyan-Waugh</title>
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <!-- Global site tag (gtag.js) - Google Analytics -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>UX Designer: Gulbahar Okuyan-Waugh</title>
+      <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <link rel="stylesheet" type="text/css" href="styles/landing.css">
+      <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+      <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500|Rozha+One" rel="stylesheet">
+      <script src="javascript/script.js"></script>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120968085-1"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
@@ -12,15 +19,7 @@
 
         gtag('config', 'UA-120968085-1');
       </script>
-     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500|Rozha+One" rel="stylesheet">
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-     <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-     <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-     <link rel="stylesheet" type="text/css" href="styles/main.css">
-     <link rel="stylesheet" type="text/css" href="styles/landing.css">
-     <script src="javascript/script.js"></script>
   </head>
-
   <body>
       <header>
               <nav><!--
@@ -40,20 +39,20 @@
                 <!--  <a href="img.html">images </a>-->
               </nav>
               <section class="hero">
-              <div class="home-hero">
-                  <h1>hi, i’m Gulbahar Okuyan-Waugh, a freelance ux designer</h1>
-                  <p>You can call me "G" for short and "Rose" for a translation.
-                  <br>Living in Milan, Made in NY.
-                    <div class="buttons">
-                        <a data scroll href="#projects"><button>view select projects</button></a>
-                        <a href="about.html"><button>about me</button></a>
-                    </div>
-              </div>
-          </section>
+                  <div id="container">
+                      <h1>hi, i’m Gulbahar Okuyan-Waugh, a freelance ux designer</h1>
+                      <p>You can call me "G" for short and "Rose" for a translation.
+                      <br>Living in Milan, Made in NY.
+                        <div class="buttons">
+                            <a data scroll href="#projects"><button>view select projects</button></a>
+                            <a href="about.html"><button>about me</button></a>
+                        </div>
+                  </div>
+              </section>
       </header>
       <main>
           <section id="projects">
-              <div class="projects-container">
+              <div id="container">
                   <div class="first">
                       <div class="content">
                         <a href="rfs.html" class="rfs-image">
@@ -89,7 +88,7 @@
           </section>
 
           <section id="contact">
-              <div class="contact-container">
+              <div id="container">
                   <div class="contact-text">
                       <h2>If you’d like to get in touch to work or just chat about
                         all things design & milan</h2>
