--- a/rfs.html
+++ b/rfs.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-     <title>UX Designer: Gulbahar Okuyan-Waugh</title>
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120968085-1"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+<head>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>UX Designer: Gulbahar Okuyan-Waugh</title>
+   <link rel="stylesheet" type="text/css" href="styles/main.css">
+   <link rel="stylesheet" type="text/css" href="styles/case-study.css">
+   <link rel="stylesheet" type="text/css" href="styles/rfs.css">
+   <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+   <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+   <script src="javascript/script.js"></script>
+   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500|Rozha+One" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Lora|Nunito" rel="stylesheet">
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120968085-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-        gtag('config', 'UA-120968085-1');
-      </script>
-     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500|Rozha+One" rel="stylesheet">
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-     <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-     <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-     <link rel="stylesheet" type="text/css" href="styles/main.css">
-     <link rel="stylesheet" type="text/css" href="styles/case-study.css">
-     <link rel="stylesheet" type="text/css" href="styles/rfs.css">
-     <script src="javascript/script.js"></script>
-  </head>
+      gtag('config', 'UA-120968085-1');
+    </script>
+</head>
 
   <body class="case-study">
       <header>
