updated about page

--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>UX Designer: Gulbahar Okuyan-Waugh</title>
         <link rel="stylesheet" type="text/css" href="styles/main.css">
-        <link rel="stylesheet" type="text/css" href="styles/landing.css">
+        <link rel="stylesheet" type="text/css" href="styles/about.css">
         <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
@@ -23,14 +22,14 @@
     </head>
 
   <body class="about-me">
-      <header>
+      <header class="about-me">
           <nav>
               <!--<a href="index.html" class="logo">
                   <img src="images/spring.png" alt="gulbahar okuyan logo">
               </a>-->
               <ul class="nav-bar" id="topnav">
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
-                      <i class="fa fa-bars"></i>
+                      <i class="fa fa-bars"></i></a>
                   <div class="clearfix"></div>
                   <li><a href="index.html">portfolio</a></li>
                   <li><a href="about.html">about</a></li>
@@ -40,29 +39,32 @@
           </nav>
       </header>
       <main>
-          <section class="about-container">
-                <div class="about-text">
-                    <h2>“Just because something works doesn’t mean it can’t be improved.”</h2>
-                    <p>I am a freelance UX designer with 8 years’ experience in strategy and project development.
+          <section class="about">
+                <div id="container">
+                    <div class="about-text">
+                        <h2>“Just because something works doesn’t mean it can’t be improved.”</h2>
+                        <p>I am a freelance UX designer with 8 years’ experience in strategy and project development.
 
-                    <p>My specialty is in identifying the big picture and working downwards.
-                      I thrive in team environments, working with diverse people in a community
-                      to address and overcome boundaries.
+                        <p>My specialty is in identifying the big picture and working downwards.
+                          I thrive in team environments, working with diverse people in a community
+                          to address and overcome boundaries.
 
-                    <p>It’s the potential of design and its ability to make things practical,
-                       usable, and beautiful that drives me.
+                        <p>It’s the potential of design and its ability to make things practical,
+                           usable, and beautiful that drives me.
 
-                    <p>I enjoy traveling and meeting people. Most recently, I was in
-                      rural Philippines interviewing women entrepreneurs to better
-                      understand how financial technology could impact their day-to-day.</p>
-                    <div class="buttons">
-                          <button>download resume</button>
-                          <a href="mailto:gokuyan@gmail.com"><button>email me</button></a>
+                        <p>I enjoy traveling and meeting people. Most recently, I was in
+                          rural Philippines interviewing women entrepreneurs to better
+                          understand how financial technology could impact their day-to-day.</p>
+                        <div class="buttons">
+                              <a href="#"><button>download resume</button></a>
+                              <a href="mailto:gokuyan@gmail.com"><button>email me</button></a>
+                        </div>
                     </div>
+                    <div class="clearfix"></div>
                 </div>
           </section>
           <section class="capabilities">
-              <div class="capabilities-container">
+              <div id="container">
                   <div class="caps">
                   <div class="clearfix"> </div>
                   <div class="first">
