--- a/rfs.html
+++ b/rfs.html
@@ -46,20 +46,22 @@
           </section>
       </header>
       <main>
-          <div class="hero-text">
-            <h1>classics reimagined</h1>
-            <p>The entrepreneur (Darcy) behind ReFated Shoes, or RF, is an artist with
-              impeccable style. Bored of the basic blacks and browns, he hand-painted his
-              own shoes in vibrant hues, patina patterns, and however else inspiration took
-              hold of his paint brush. To his surprise, colleagues and passersby were offering
-              to buy the shoes off his feet. So, he decided to take his hobby online.
-            <p>After a successful stint on Etsy, the entrepreneur decided that it was time to
-              host his own site and define his brand. Enter: me. My role was to help him with
-              strategy, marketing, and design.</p>
-            <a href="https://projects.invisionapp.com/share/E5E270F8X#/screens"><button class="case-study-button">view prototype</button></a>
-          </div>
+          <section class="introduction">
+              <div id="container">
+                  <h1>classics reimagined</h1>
+                  <p>The entrepreneur (Darcy) behind ReFated Shoes, or RF, is an artist with
+                    impeccable style. Bored of the basic blacks and browns, he hand-painted his
+                    own shoes in vibrant hues, patina patterns, and however else inspiration took
+                    hold of his paint brush. To his surprise, colleagues and passersby were offering
+                    to buy the shoes off his feet. So, he decided to take his hobby online.
+                  <p>After a successful stint on Etsy, the entrepreneur decided that it was time to
+                    host his own site and define his brand. Enter: me. My role was to help him with
+                    strategy, marketing, and design.</p>
+                  <a href="https://projects.invisionapp.com/share/E5E270F8X#/screens"><button class="case-study-button">view prototype</button></a>
+              </div>
+          </section>
           <section class="intro">
-              <div class="intro-text">
+              <div id="container">
                   <h2>starting from the sole up</h2>
                   <p>Since we were going from an Etsy site to a stand-alone e-commerce site,
                     we needed a better understanding of the environment: who else was doing this?
@@ -67,7 +69,9 @@
                     site? And most importantly, how do we set ourselves up to compete?</p>
                   <img src="images/etsy-rfs.png" class="full">
               </div>
-              <div class="competition">
+          </section>
+          <section class="competition">
+              <div id="container">
                   <h3>Who's Out There?</h3>
                   <p>During the stakeholder interview, Darcy identified a few other companies
                   with a similar business model:</p>
@@ -75,18 +79,16 @@
                   <ul class="inspo">
                       <li><img src="images/inspo1.png" class="third"></li>
                       <li><img src="images/inspo2.png" class="third"></li>
-                      <!--<li><img src="images/inspo3.png" class="sixth"></li>
-                      <li><img src="images/comp1.png" class="sixth"></li>-->
                       <li><img src="images/comp2.png" class="third"></li>
-                      <!--<li><img src="images/comp3.png" class="sixth"></li>-->
                   </ul>
-                  <!--<div class="box"><p></p></div>-->
                   <div class="clearfix"></div>
                   <p>Design pattern: the direct competitors use stone/slate textures and colors,
                     while the sources of inspiration rely on a black and white color scheme with
                     brightly colored calls-to-action.</p>
               </div>
-              <div class="user-research">
+          </section>
+          <section class="user-research">
+              <div id="container">
                   <h3>But first, what do the people want?</h3>
                   <p>Considering the distinct nature of this business - painting second-hand,
                     vintage, or out-of-season shoes - we had to figure out how to properly
@@ -102,7 +104,6 @@
                         who would pay between $100-$300 for a pair of shoes AND would purchase
                         shoes online, 50% of them would consider buying refurbished shoes.</p>
                   </div>
-
                   <div class="survey-results">
                       <p>The second survey, with <span>133 respondents</span>, and third survey gave
                         insight into word choice: </p>
@@ -115,9 +116,10 @@
                         behind RF that turned customers away. The word refurbished had to change, so we decided
                         on hand-painted. This term tested well during the website prototype.</p>
                   </div>
+              </div>
           </section>
           <section class="environment">
-              <div class="environment-container">
+              <div id="container">
                       <div class="clearfix"></div>
                       <div class="first">
                           <h3>Challenges</h3>
@@ -138,7 +140,7 @@
               </div>
           </section>
           <section class="users">
-              <div class="users-container">
+              <div id="container">
                   <h3>Who Are They?</h3>
                   <div class="user-boxes">
                       <img src="images/vincent.png" class="first">
@@ -148,7 +150,7 @@
               </div>
           </section>
           <section class="info-arch">
-              <div class="info-arch-container">
+              <div id="container">
                   <div class="mapping">
                       <h2>information architecture</h2>
                       <h3>Mapping</h3>
@@ -157,6 +159,7 @@
                         customer wanted to learn more about the product, with multiple survey
                         respondents suggesting a section devoted to hand-painting techniques.</p>
                       <img src="images/rfs-site-map.png" class="full">
+                      <div class="clearfix"></div>
                   </div>
                   <div class="mapping">
                   <h3>Flows</h3>
@@ -169,20 +172,20 @@
             </div>
           </section>
           <section class="sketch">
-              <div class="sketching">
+              <div id="container">
                   <h2>translating to web</h2>
                   <h3>Sketching to Lo-Fi</h3>
                   <img src="images/prototypes.png" class="more-full">
               </div>
           </section>
           <section class="branding">
-              <div class="branding-container">
-                  <div class="case-logos">
+              <div id="container">
+                  <div class="branding-section">
                       <h2>branding</h2>
                       <h3>Logo Formation</h3>
                       <img src="images/logo-formation.png" class="more-full">
                   </div>
-                  <div class="case-logos">
+                  <div class="branding-section">
                       <h3>Logo Details</h3>
                       <div class="final-logos">
                           <img src="images/logo-styles.png" class="first">
@@ -190,7 +193,7 @@
                           <div class="clearfix"></div>
                       </div>
                   </div>
-                  <div class="colors">
+                  <div class="branding-section">
                       <h3>Colors</h3>
                       <div class="color-samples">
                           <ul class="images">
@@ -202,7 +205,7 @@
                           </ul>
                       </div>
                   </div>
-                  <div class="other-branding">
+                  <div class="branding-section">
                       <div class="type">
                           <h3>Typography</h3>
                           <img src="images/fonts.png">
